# RepoTrack

./: .env.example  .gitignore  README.md  index.html  package-lock.json  package.json  repo-track-prompt.md  repotrack-fake-data.json  repotrack.json  tailwind.config.js
.claude/: settings.local.json
.repotrack/: project.json
.repotrack/issues/bug-40ccfce4/: issue.json
.repotrack/issues/bug-45ce36ed/: issue.json
.repotrack/issues/bug-4e7143c7/: issue.json
.repotrack/issues/bug-7845d31f/: issue.json
.repotrack/issues/bug-8ffe86f9/: issue.json
.repotrack/issues/bug-b6067071/: issue.json
.repotrack/issues/bug-d3646bae/: issue.json
.repotrack/issues/feat-547161fd/: issue.json
.repotrack/issues/feat-5b132fcd/: issue.json
.repotrack/issues/feat-69c8d0e7/: issue.json
.repotrack/issues/feat-7d636014/: issue.json
.repotrack/issues/feat-bd3a6c00/: issue.json
.repotrack/issues/feat-c7d23f7c/: issue.json
.repotrack/issues/feat-eda20274/: issue.json
.repotrack/issues/feat-fe06a46a/: issue.json
.repotrack/issues/imp-7156d35d/: issue.json
.repotrack/issues/imp-a88c4b68/: issue.json
.repotrack/issues/imp-c96487d9/: issue.json
.repotrack/issues/imp-e80810f8/: issue.json
.repotrack/issues/imp-eb041952/: issue.json
example/: repotrack.json
release/Windows/: RepoTrack_0.1.0_x64_en-US.msi  RepoTrack_0.2.0_x64_en-US.msi  RepoTrack_0.3.0_x64_en-US.msi  RepoTrack_0.3.1_x64_en-US.msi
sample_data/: repotrack.json
src/: App.tsx  index.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/auth/: config.rs  mod.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/db/: mod.rs
src-tauri/src/git/: mod.rs
src-tauri/src/models/: mod.rs
src-tauri/src/stats/: mod.rs
src-tauri/src/storage/: mod.rs
src/features/dashboard/: BugsDashboard.tsx  Dashboard.tsx  FeaturesDashboard.tsx  OverviewDashboard.tsx
src/features/git/: GitGraph.tsx  GitTab.tsx
src/lib/: api.ts  colorUtils.ts  store.ts  theme.ts  types.ts  useGitStatusPolling.ts
(+17 files in other folders)
