[package]
name = "repotrack"
version = "1.0.0"
edition = "2021"

[lib]
name = "repotrack_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "repotrack"
path = "src/main.rs"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
rusqlite = { version = "0.31", features = ["bundled"] }
thiserror = "1"
anyhow = "1"
notify = "6"
tokio = { version = "1", features = ["full"] }
csv = "1.3"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
