[package]
name = "repotrack"
version = "0.4.1"
edition = "2021"

[lib]
name = "repotrack_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "repotrack"
path = "src/main.rs"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
rusqlite = { version = "0.31", features = ["bundled"] }
thiserror = "1"
anyhow = "1"
notify = "6"
tokio = { version = "1", features = ["full"] }
csv = "1.3"
reqwest = { version = "0.12", features = ["json"] }
sha2 = "0.10"
base64 = "0.22"
rand = "0.8"
tiny_http = "0.12"
urlencoding = "2"
open = "5"
git2 = "0.19"
dotenvy = "0.15.7"

[target.'cfg(target_os = "macos")'.dependencies]
objc2-foundation = { version = "0.3", default-features = false, features = ["NSString", "NSUserDefaults"] }

[build-dependencies]
tauri-build = { version = "2", features = [] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
